--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <span class="content">
+        
+    </span>
+
+<script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"> </script>
+    <script src="script.js"></script>
+</body>
+</html> -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,48 +29,48 @@
 </head>
 <body>
     <div class="content">
-      <!-- <ul class="tag-cloud">
-        <li><a href="https://www.minnewyork.com">Min New York</a></li>
-        <li><a href="https://www.olaplex.com">Olaplex</a></li>
-        <li><a href="https://www.exnihilo.com">ex nihilo</a></li>
-        <li><a href="https://www.melvita.com">Melvita</a></li>
-        <li><a href="https://www.loccitane.com">LOCCITANE EN PROVENCE</a></li>
-        <li><a href="https://www.oreal.com">L'Oréal</a></li>
-        <li><a href="https://www.zadigvoltaire.com">zadig&voltaire</a></li>
-        <li><a href="https://www.trussardi.com">trussardi</a></li>
-        <li><a href="https://www.crabtree.com">CRABTREE und EVELYN</a></li>
-        <li><a href="https://www.ree.com">REE</a></li>
-        <li><a href="https://www.bronnley.com">BRONNLEY ENGLAND</a></li>
-        <li><a href="https://www.nasomatto.com">NASOMATTO</a></li>
-        <li><a href="https://www.escentricmolecules.com">escentric molecules</a></li>
-        <li><a href="https://www.thierrymugler.com">Thierry Mugler</a></li>
-        <li><a href="https://www.cacharel.com">Cacharel</a></li>
-        <li><a href="https://www.byredo.com">Byredo</a></li>
-        <li><a href="https://www.zegna.com">Ermenegildo Zegna</a></li>
-        <li><a href="https://www.carolinaherrera.com">Carolina Herrera</a></li>
-        <li><a href="https://www.bondnyc.com">Bond NYC No 9</a></li>
-        <li><a href="https://www.bobbibrown.com">Bobbi Brown</a></li>
-        <li><a href="https://www.moschino.com">Moschino</a></li>
-        <li><a href="https://www.villoresi.com">villoresi</a></li>
-        <li><a href="https://www.caritaparis.com">CARITA PARIS</a></li>
-        <li><a href="https://www.decleor.com">DECLEOR PARIS</a></li>
-        <li><a href="https://www.matierepremiere.com">matiere premiere</a></li>
-        <li><a href="https://www.laurabiagiotti.com">Laura Biagiotti</a></li>
-        <li><a href="https://www.d2.com">Dsquared2</a></li>
-        <li><a href="https://www.vancleefarpels.com">Van Cleef Arpels</a></li>
-        <li><a href="https://www.clivechristian.com">clive christian</a></li>
-        <li><a href="https://www.hermes.com">Hermes</a></li>
-        <li><a href="https://www.la-bruket.com">LA BRUKET</a></li>
-        <li><a href="https://www.zenology.com">Zenology</a></li>
-        <li><a href="https://www.prudeneeparis.com">Prudenee PARIS</a></li>
-        <li><a href="https://www.acca.com">ACCA KAPPA</a></li>
-        <li><a href="https://www.guerlain.com">guerlain</a></li>
-        <li><a href="https://www.kilian.com">Kilian</a></li>
-        <li><a href="https://www.annickgoutal.com">Annick Goutal</a></li>
-      </ul> -->
+        <div id="div1">
+            <a href="https://www.minnewyork.com">Min New York</a>
+            <a href="https://www.olaplex.com">Olaplex</a>
+            <a href="https://www.exnihilo.com">ex nihilo</a>
+            <a href="https://www.melvita.com">Melvita</a>
+            <a href="https://www.loccitane.com">LOCCITANE EN PROVENCE</a>
+            <a href="https://www.oreal.com">L'Oréal</a>
+            <a href="https://www.zadigvoltaire.com">zadig&voltaire</a>
+            <a href="https://www.trussardi.com">trussardi</a>
+            <a href="https://www.crabtree.com">CRABTREE und EVELYN</a>
+            <a href="https://www.ree.com">REE</a>
+            <a href="https://www.bronnley.com">BRONNLEY ENGLAND</a>
+            <a href="https://www.nasomatto.com">NASOMATTO</a>
+            <a href="https://www.escentricmolecules.com">escentric molecules</a>
+            <a href="https://www.thierrymugler.com">Thierry Mugler</a>
+            <a href="https://www.cacharel.com">Cacharel</a>
+            <a href="https://www.byredo.com">Byredo</a>
+            <a href="https://www.zegna.com">Ermenegildo Zegna</a>
+            <a href="https://www.carolinaherrera.com">Carolina Herrera</a>
+            <a href="https://www.bondnyc.com">Bond NYC No 9</a>
+            <a href="https://www.bobbibrown.com">Bobbi Brown</a>
+            <a href="https://www.moschino.com">Moschino</a>
+            <a href="https://www.villoresi.com">villoresi</a>
+            <a href="https://www.caritaparis.com">CARITA PARIS</a>
+            <a href="https://www.decleor.com">DECLEOR PARIS</a>
+            <a href="https://www.matierepremiere.com">matiere premiere</a>
+            <a href="https://www.laurabiagiotti.com">Laura Biagiotti</a>
+            <a href="https://www.d2.com">Dsquared2</a>
+            <a href="https://www.vancleefarpels.com">Van Cleef Arpels</a>
+            <a href="https://www.clivechristian.com">clive christian</a>
+            <a href="https://www.hermes.com">Hermes</a>
+            <a href="https://www.la-bruket.com">LA BRUKET</a>
+            <a href="https://www.zenology.com">Zenology</a>
+            <a href="https://www.prudeneeparis.com">Prudenee PARIS</a>
+            <a href="https://www.acca.com">ACCA KAPPA</a>
+            <a href="https://www.guerlain.com">guerlain</a>
+            <a href="https://www.kilian.com">Kilian</a>
+            <a href="https://www.annickgoutal.com">Annick Goutal</a>
+        </div>
     </div>
 
 <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"> </script>
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
