--- a/index.html
+++ b/index.html
@@ -10,43 +10,43 @@
 <body>
     <div class="content">
         <div id="div1">
-            <a href="https://www.minnewyork.com">Min New York</a>
-            <a href="https://www.olaplex.com">Olaplex</a>
-            <a href="https://www.exnihilo.com">ex nihilo</a>
+            <a href="https://min.com/int/">Min New York</a>
+            <a href="https://olaplex.com">Olaplex</a>
+            <a href="https://www.ex-nihilo-paris.com/">ex nihilo</a>
             <a href="https://www.melvita.com">Melvita</a>
-            <a href="https://www.loccitane.com">LOCCITANE EN PROVENCE</a>
-            <a href="https://www.oreal.com">L'Oréal</a>
-            <a href="https://www.zadigvoltaire.com">zadig&voltaire</a>
-            <a href="https://www.trussardi.com">trussardi</a>
-            <a href="https://www.crabtree.com">CRABTREE und EVELYN</a>
+            <a href="https://uk.loccitane.com/">Loccitane/a>
+            <a href="https://www.loreal.com/en/">L'Oréal</a>
+            <a href="https://zadig-et-voltaire.com/eu/uk/">zadig&voltaire</a>
+            <a href="https://www.trussardi.com/">trussardi</a>
+            <a href="https://www.crabtree-evelyn.com/">Crabtree-Evelyn</a>
             <a href="https://www.ree.com">REE</a>
-            <a href="https://www.bronnley.com">BRONNLEY ENGLAND</a>
-            <a href="https://www.nasomatto.com">NASOMATTO</a>
-            <a href="https://www.escentricmolecules.com">escentric molecules</a>
-            <a href="https://www.thierrymugler.com">Thierry Mugler</a>
-            <a href="https://www.cacharel.com">Cacharel</a>
-            <a href="https://www.byredo.com">Byredo</a>
-            <a href="https://www.zegna.com">Ermenegildo Zegna</a>
-            <a href="https://www.carolinaherrera.com">Carolina Herrera</a>
-            <a href="https://www.bondnyc.com">Bond NYC No 9</a>
-            <a href="https://www.bobbibrown.com">Bobbi Brown</a>
-            <a href="https://www.moschino.com">Moschino</a>
-            <a href="https://www.villoresi.com">villoresi</a>
-            <a href="https://www.caritaparis.com">CARITA PARIS</a>
-            <a href="https://www.decleor.com">DECLEOR PARIS</a>
-            <a href="https://www.matierepremiere.com">matiere premiere</a>
-            <a href="https://www.laurabiagiotti.com">Laura Biagiotti</a>
-            <a href="https://www.d2.com">Dsquared2</a>
-            <a href="https://www.vancleefarpels.com">Van Cleef Arpels</a>
-            <a href="https://www.clivechristian.com">clive christian</a>
-            <a href="https://www.hermes.com">Hermes</a>
-            <a href="https://www.la-bruket.com">LA BRUKET</a>
-            <a href="https://www.zenology.com">Zenology</a>
-            <a href="https://www.prudeneeparis.com">Prudenee PARIS</a>
-            <a href="https://www.acca.com">ACCA KAPPA</a>
-            <a href="https://www.guerlain.com">guerlain</a>
-            <a href="https://www.kilian.com">Kilian</a>
-            <a href="https://www.annickgoutal.com">Annick Goutal</a>
+            <a href="https://www.scentstore.com/brands/bronnley/">scentstore</a>
+            <a href="https://www.nasomatto.com/store/">Nasomatto</a>
+            <a href="https://www.escentric.com/">escentric molecules</a>
+            <a href="https://inter.mugler.com/">Thierry Mugler</a>
+            <a href="https://www.theperfumeshop.com/cacharel/b/9">Cacharel</a>
+            <a href="https://www.byredo.com/uk_en/">Byredo</a>
+            <a href="https://www.zegna.com/uk-en/">Ermenegildo Zegna</a>
+            <a href="https://www.carolinaherrera.com/uk/en/">Carolina Herrera</a>
+            <a href="https://www.harrods.com/en-gb/shopping/bond-no-9">Bond NYC No 9</a>
+            <a href="https://www.bobbibrown.co.uk/">Bobbi Brown</a>
+            <a href="https://www.moschino.com/gb_en/">Moschino</a>
+            <a href="https://www.lorenzovilloresi.it/uk_en/">villoresi</a>
+            <a href="https://www.carita.co.uk/">Carita Paris</a>
+            <a href="https://www.decleor.co.uk/">Decleor Paris</a>
+            <a href="https://matiere-premiere.com/en/fragrance/">matiere premiere</a>
+            <a href="https://laurabiagiotti.it/?lang=en">Laura Biagiotti</a>
+            <a href="https://www.dsquared2.com/gb/">Dsquared2</a>
+            <a href="https://www.vancleefarpels.com/">Van Cleef Arpels</a>
+            <a href="https://www.clivechristian.com/">clive christian</a>
+            <a href="https://www.hermes.com/uk/en/">Hermes</a>
+            <a href="https://www.labruket.com/en-gb">LA Bruket</a>
+            <a href="https://zenology.com/">Zenology</a>
+            <a href="https://www.fragrantica.com/">Fragrantica</a>
+            <a href="https://www.accakappa.com/eu/">Acca Kappa</a>
+            <a href="https://www.guerlain.com/uk/en-uk">guerlain</a>
+            <a href="https://www.bykilian.co.uk/">ByKilian</a>
+            <a href="https://www.goutalparis.com/en">Goutal</a>
         </div>
     </div>
 
